# operagents

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: depandabot.yml
.github/actions/generate-schema/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: gh-pages.yml  pyright.yml  release.yml  ruff.yml
examples/chatbot/: config.yaml  custom.py  run.py
operagents/: __init__.py  exception.py  log.py  utils.py  version.py
operagents/agent/: __init__.py  memory.py
operagents/backend/: __init__.py  _base.py  openai.py  user.py
operagents/character/: __init__.py
operagents/cli/: __init__.py
operagents/config/: __init__.py  const.py  operagents.schema.json
operagents/director/: __init__.py  _base.py  model.py  never.py  user.py
operagents/flow/: __init__.py  _base.py  model.py  order.py  user.py
operagents/hook/: __init__.py  _base.py  summary.py
operagents/opera/: __init__.py
operagents/prop/: __init__.py  _base.py  function.py
operagents/scene/: __init__.py
operagents/scene/prepare/: __init__.py  _base.py  function.py  preface.py
operagents/timeline/: __init__.py  event.py
schemas/: config-0.0.10.schema.json  config-0.0.11.schema.json  config-0.0.12.schema.json  config-0.0.13.schema.json  config-0.0.15.schema.json  config-0.0.2.schema.json  config-0.0.3.schema.json  config-0.0.4.schema.json  config-0.0.5.schema.json  config-0.0.6.schema.json  config-0.0.7.schema.json  config-0.0.8.schema.json  config-0.0.9.schema.json  operagents.schema.json
scripts/: generate_config_schema.py
